test/integration/cli-args/sstanc.t/fail/11_parameter_missing_prior.stan
// Compile with: stanc --sstanc --sstan-protect=y
data {
  int<lower=0> N;
  vector[N] x;
  vector[N] y;
}
parameters {
  real a;
  real b;
  real<lower=0> sigma;
}
model {
  y ~ normal(a + b * x, sigma);
}
